--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 20px;
-      max-width: 400px;
+      max-width: 600px;
       width: 100%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -56,4 +56,9 @@ body {
       padding: 10px;
       margin: 5px 0;
       font-size: 16px;
+}
+
+#restartBtn {
+  margin-top: 15px;
+
 }
