--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 20px;
+      margin: 0;
 }
 
 .card {
@@ -30,8 +30,12 @@ body {
       background-color: #0056b3;
 }
 
+.symptom-box, .input {
+      width: 90%;
+      justify-content: center;
+}
+
 .input {
-      width: 95%;
       padding: 10px;
       margin-bottom: 10px;
       border: 1px solid #ddd;
@@ -68,16 +72,17 @@ body {
 }
 
 .s1 {
+  display: flex;
   width: 100vw;
   height: 7vw;
   min-height: 80px;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  vertical-align: center;
   border: 2px dashed red;
   background-color: #001120;
   color: #dddddd;
   font-size: 20px;
-  margin-top: -28px;
   margin-bottom: 35px;
 }
 
@@ -86,7 +91,7 @@ h1 {
 }
 
 .s2 {
-  
+  width: 100%;
 }
 
 #guessTracker {
